tests/error/mkNilData.uplc
(program 0.0.0 [(builtin mkNilData) (con bool True)])
